# War3Nat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: war3nat.ini
include/: logger.h  securitywatchdog.h  war3nat.h
src/: logger.cpp  main.cpp  securitywatchdog.cpp  war3nat.cpp
